--- a/04-Project/01-mi.com/css/common.css
+++ b/04-Project/01-mi.com/css/common.css
@@ -18,6 +18,14 @@ a{
 .clearfix{
 	*zoom: 1;
 }
+.right{
+	float: right;
+	width: 978px;
+}
+.left{
+	float: left;
+	width: 235px;
+}
 h2{
 	float: left;
 	line-height: 62px;
@@ -26,8 +34,72 @@ h2{
 }
 .main-content .hd{
 	height: 62px;
+	line-height: 62px;
 	background-color: #f5f5f5;
 }
 .more{
 	float: right;
 }
+/*卖场展示*/
+
+	.product{
+		float: left;
+		width: 234px;
+		background-color: #fff;
+		margin-left: 14px;
+	}
+	.product:nth-child(1),
+	.product:nth-child(5){
+		margin-left: 0px;
+	}
+	.product-l{
+		height: 300px;
+	}
+	.product-m{
+		height: 300px;
+		margin-bottom: 14px;
+	}
+	.product{
+		text-align: center;
+	}
+	.product-img{
+		width: 160px;
+		height: 160px;
+		margin-top: 54px;
+	}
+	.product .img2{
+		margin-top:20px;
+		margin-left:17px;
+	}
+	.product-name{
+		margin-top: 38px;
+	}
+	.product-intro{
+		margin-top: 8px;
+		text-align: center;
+		color: #adadad;
+		font-size: 12px;
+	}
+	.product-price{
+		margin-top: 20px;
+		text-align: center;
+		font-size: 14px;
+		color: #ff6700;
+	}
+/*广告通用*/
+	.adver-tb-1{
+		margin-top:22px;
+		margin-bottom:22px;
+	}
+	.adver-tb-2{
+		margin-top:36px;
+		margin-bottom:18px;
+	}
+	.adver{
+		width: 1226px;
+		height: 120px;
+	}	
+	.adver img{
+		width: 100%;
+		height: 100%;
+	}
